# OOP_raytracer_2023

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: chocolatine.yml
scenes/: bootstrap1.cfg  bootstrap2.cfg  colored_lights.cfg  colored_lights2.cfg  directional_light.cfg  mirror.cfg  transformations.cfg
src/: Main.cpp
src/lights/ambient_light/: AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt  Entrypoint.cpp
src/lights/directional_light/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  Entrypoint.cpp
src/lights/phong_light/: CMakeLists.txt  Entrypoint.cpp  PhongLight.cpp  PhongLight.hpp
src/lights/point_light/: CMakeLists.txt  Entrypoint.cpp  PointLight.cpp  PointLight.hpp
src/main/: ARenderer.cpp  ARenderer.hpp  DLLoader.hpp  IRenderer.hpp  LightBuilder.cpp  MaterialBuilder.cpp  ObjectBuilder.cpp  ObjectBuilder.hpp  PPMRenderer.cpp  PPMRenderer.hpp  Parser.cpp  Parser.hpp  PluginLoader.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp
src/materials/flat_color/: CMakeLists.txt  Entrypoint.cpp  FlatColor.cpp  FlatColor.hpp
src/materials/mirror/: CMakeLists.txt  Entrypoint.cpp  Mirror.cpp  Mirror.hpp
src/primitives/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp  Entrypoint.cpp
src/primitives/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  Entrypoint.cpp
src/primitives/plane/: CMakeLists.txt  Entrypoint.cpp  Plane.cpp  Plane.hpp
src/primitives/sphere/: CMakeLists.txt  Entrypoint.cpp  Sphere.cpp  Sphere.hpp
src/shared/: ALight.cpp  ALight.hpp  AMaterial.cpp  AMaterial.hpp  AObject.cpp  AObject.hpp  ARenderer.cpp  ARenderer.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  DLLoader.hpp  Errors.hpp  Factory.hpp  ILight.hpp  IMaterial.hpp  IObject.hpp  IRenderer.hpp  LightBuilder.cpp  LightBuilder.hpp  MaterialBuilder.hpp  Matrix.cpp  Matrix.hpp  PPMRenderer.cpp  Parser.cpp  Parser.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginType.hpp  Point.hpp  Ray.cpp  Ray.hpp  RayHit.hpp  ScalarList.hpp  Scatter.hpp  Scene.cpp  Scene.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  (+1 more)
tests/: Makefile
tests/scenes/: box_1.cfg  box_mirror.cfg  box_softshadows.cfg  cone.cfg  cylinder1.cfg  cylinder_transformation.cfg  test1.cfg
tests/unit_tests_src/: tests_matrix.cpp  tests_point.cpp  tests_vector.cpp
